Document nested test group and test-suite dependency conventions